fixing shallow copying of python imageSet lists to be deep copies

--- a/ENCM 509 Project - OpenCV Facial Detection.ipynb
+++ b/ENCM 509 Project - OpenCV Facial Detection.ipynb
@@ -73,7 +73,17 @@
     "import cv2 as cv\n",
     "import dlib\n",
     "import sys\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "#creating deep copies of the imageSet\n",
+    "import copy\n",
+    "\n",
+    "#noise filtering\n",
+    "from scipy.ndimage.filters import median_filter\n",
+    "\n",
+    "#lbp cascades\n",
+    "from skimage import data\n",
+    "from skimage.feature import Cascade"
    ]
   },
   {
@@ -258,9 +268,6 @@
    "outputs": [],
    "source": [
     "#NOISE FILTERING / IMAGE SHARPENING\n",
-    "\n",
-    "from scipy.ndimage.filters import median_filter\n",
-    "\n",
     "for i in range(1, numImagesInSet + 1):\n",
     "    #Apply a Gausian Noise Filter\n",
     "    gaussianFilter = cv.GaussianBlur(imageSet[i - 1], (0, 0), 2.0)\n",
@@ -309,7 +316,7 @@
     "mScaleFactor = 1.1\n",
     "mMinNeighbours = 5\n",
     "\n",
-    "imageSetHaarCascade1 = imageSet\n",
+    "imageSetHaarCascade1 = copy.deepcopy(imageSet)\n",
     "\n",
     "for i in range(1, numImagesInSet + 1):\n",
     "    faceDimensions = frontFaceHaarCascade.detectMultiScale(imageSetHaarCascade1[i - 1], scaleFactor = mScaleFactor, minNeighbors = mMinNeighbours)\n",
@@ -341,7 +348,7 @@
     "mScaleFactor = 1.5\n",
     "mMinNeighbours = 5\n",
     "\n",
-    "imageSetHaarCascade3 = imageSet\n",
+    "imageSetHaarCascade3 = copy.deepcopy(imageSet)\n",
     "\n",
     "for i in range(1, numImagesInSet + 1):\n",
     "    faceDimensions = frontFaceHaarCascade.detectMultiScale(imageSetHaarCascade3[i - 1], scaleFactor = mScaleFactor, minNeighbors = mMinNeighbours)\n",
@@ -373,7 +380,7 @@
     "mScaleFactor = 1.9\n",
     "mMinNeighbours = 5\n",
     "\n",
-    "imageSetHaarCascade5 = imageSet\n",
+    "imageSetHaarCascade5 = copy.deepcopy(imageSet)\n",
     "\n",
     "for i in range(1, numImagesInSet + 1):\n",
     "    faceDimensions = frontFaceHaarCascade.detectMultiScale(imageSetHaarCascade5[i - 1], scaleFactor = mScaleFactor, minNeighbors = mMinNeighbours)\n",
@@ -405,7 +412,7 @@
     "mScaleFactor = 1.5\n",
     "mMinNeighbours = 2\n",
     "\n",
-    "imageSetHaarCascade6 = imageSet\n",
+    "imageSetHaarCascade6 = copy.deepcopy(imageSet)\n",
     "\n",
     "for i in range(1, numImagesInSet + 1):\n",
     "    faceDimensions = frontFaceHaarCascade.detectMultiScale(imageSetHaarCascade6[i - 1], scaleFactor = mScaleFactor, minNeighbors = mMinNeighbours)\n",
@@ -437,7 +444,7 @@
     "mScaleFactor = 1.5\n",
     "mMinNeighbours = 7\n",
     "\n",
-    "imageSetHaarCascade7 = imageSet\n",
+    "imageSetHaarCascade7 = copy.deepcopy(imageSet)\n",
     "\n",
     "for i in range(1, numImagesInSet + 1):\n",
     "    faceDimensions = frontFaceHaarCascade.detectMultiScale(imageSetHaarCascade7[i - 1], scaleFactor = mScaleFactor, minNeighbors = mMinNeighbours)\n",
@@ -474,9 +481,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from skimage import data\n",
-    "from skimage.feature import Cascade\n",
-    "\n",
     "frontFaceHaarCascade = Cascade('./lbpcascades/lbpcascade_frontalcatface.xml')\n",
     "\n",
     "mscale_ratio = 1.2\n",
@@ -484,7 +488,7 @@
     "mmin_size = (60, 60)\n",
     "mmax_size = (123, 123)\n",
     "\n",
-    "imageSetLBPCascade1 = imageSet\n",
+    "imageSetLBPCascade1 = copy.deepcopy(imageSet)\n",
     "\n",
     "for i in range(1, numImagesInSet + 1):\n",
     "    faceDimensions = frontFaceHaarCascade.detect_multi_scale(img = imageSetLBPCascade1[i - 1], \n",
@@ -504,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88dd8eb5",
+   "id": "7dea343f",
    "metadata": {},
    "source": [
     "#### scale_ratio = 1.5, step_ratio = 1, min_size = (60, 60), max_size = (123, 123) "
@@ -513,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e846f8a8",
+   "id": "169d2061",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +526,7 @@
     "mmin_size = (60, 60)\n",
     "mmax_size = (123, 123)\n",
     "\n",
-    "imageSetLBPCascade2 = imageSet\n",
+    "imageSetLBPCascade2 = copy.deepcopy(imageSet)\n",
     "\n",
     "for i in range(1, numImagesInSet + 1):\n",
     "    faceDimensions = frontFaceHaarCascade.detect_multi_scale(img = imageSetLBPCascade2[i - 1], \n",
@@ -542,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7c63b01",
+   "id": "87f2eb32",
    "metadata": {},
    "source": [
     "#### scale_ratio = 1.8, step_ratio = 1, min_size = (60, 60), max_size = (123, 123) "
@@ -551,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0f997b7f",
+   "id": "c15f7adf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +564,7 @@
     "mmin_size = (60, 60)\n",
     "mmax_size = (123, 123)\n",
     "\n",
-    "imageSetLBPCascade3 = imageSet\n",
+    "imageSetLBPCascade3 = copy.deepcopy(imageSet)\n",
     "\n",
     "for i in range(1, numImagesInSet + 1):\n",
     "    faceDimensions = frontFaceHaarCascade.detect_multi_scale(img = imageSetLBPCascade3[i - 1], \n",
@@ -580,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ae0a7ee",
+   "id": "e6fd9646",
    "metadata": {},
    "source": [
     "#### scale_ratio = 1.2, step_ratio = 2, min_size = (60, 60), max_size = (123, 123) "
@@ -589,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "aa9954cc",
+   "id": "95673e3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +602,7 @@
     "mmin_size = (60, 60)\n",
     "mmax_size = (123, 123)\n",
     "\n",
-    "imageSetLBPCascade4 = imageSet\n",
+    "imageSetLBPCascade4 = copy.deepcopy(imageSet)\n",
     "\n",
     "for i in range(1, numImagesInSet + 1):\n",
     "    faceDimensions = frontFaceHaarCascade.detect_multi_scale(img = imageSetLBPCascade4[i - 1], \n",
@@ -618,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e7a086c",
+   "id": "3624ebbc",
    "metadata": {},
    "source": [
     "#### scale_ratio = 1.2, step_ratio = 3, min_size = (60, 60), max_size = (123, 123) "
@@ -627,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a6f7307d",
+   "id": "c7e88751",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +640,7 @@
     "mmin_size = (60, 60)\n",
     "mmax_size = (123, 123)\n",
     "\n",
-    "imageSetLBPCascade5 = imageSet\n",
+    "imageSetLBPCascade5 = copy.deepcopy(imageSet)\n",
     "\n",
     "for i in range(1, numImagesInSet + 1):\n",
     "    faceDimensions = frontFaceHaarCascade.detect_multi_scale(img = imageSetLBPCascade5[i - 1], \n",
@@ -656,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acd6bd6f",
+   "id": "e5d5fdb3",
    "metadata": {},
    "source": [
     "#### scale_ratio = 1.2, step_ratio = 1, min_size = (20, 20), max_size = (123, 123) "
@@ -665,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5f9cc494",
+   "id": "51a2c5f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +678,7 @@
     "mmin_size = (20, 20)\n",
     "mmax_size = (123, 123)\n",
     "\n",
-    "imageSetLBPCascade6 = imageSet\n",
+    "imageSetLBPCascade6 = copy.deepcopy(imageSet)\n",
     "\n",
     "for i in range(1, numImagesInSet + 1):\n",
     "    faceDimensions = frontFaceHaarCascade.detect_multi_scale(img = imageSetLBPCascade6[i - 1], \n",
@@ -694,7 +698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bf4fe86",
+   "id": "a1e0119d",
    "metadata": {},
    "source": [
     "#### scale_ratio = 1.2, step_ratio = 1, min_size = (100, 100), max_size = (123, 123) "
@@ -703,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1855dee4",
+   "id": "25ec07c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +716,7 @@
     "mmin_size = (100, 100)\n",
     "mmax_size = (123, 123)\n",
     "\n",
-    "imageSetLBPCascade7 = imageSet\n",
+    "imageSetLBPCascade7 = copy.deepcopy(imageSet)\n",
     "\n",
     "for i in range(1, numImagesInSet + 1):\n",
     "    faceDimensions = frontFaceHaarCascade.detect_multi_scale(img = imageSetLBPCascade7[i - 1], \n",
@@ -732,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99db38a3",
+   "id": "e0adeb74",
    "metadata": {},
    "source": [
     "#### scale_ratio = 1.2, step_ratio = 1, min_size = (60, 60), max_size = (80, 80) "
@@ -741,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "418a972f",
+   "id": "2f9e3d06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +754,7 @@
     "mmin_size = (60, 60)\n",
     "mmax_size = (80, 80)\n",
     "\n",
-    "imageSetLBPCascade8 = imageSet\n",
+    "imageSetLBPCascade8 = copy.deepcopy(imageSet)\n",
     "\n",
     "for i in range(1, numImagesInSet + 1):\n",
     "    faceDimensions = frontFaceHaarCascade.detect_multi_scale(img = imageSetLBPCascade8[i - 1], \n",
@@ -770,7 +774,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87b1b83d",
+   "id": "62b8782a",
    "metadata": {},
    "source": [
     "#### scale_ratio = 1.2, step_ratio = 1, min_size = (60, 60), max_size = (190, 190) "
@@ -779,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "db89e05f",
+   "id": "975598d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +792,7 @@
     "mmin_size = (60, 60)\n",
     "mmax_size = (190, 190)\n",
     "\n",
-    "imageSetLBPCascade9 = imageSet\n",
+    "imageSetLBPCascade9 = copy.deepcopy(imageSet)\n",
     "\n",
     "for i in range(1, numImagesInSet + 1):\n",
     "    faceDimensions = frontFaceHaarCascade.detect_multi_scale(img = imageSetLBPCascade9[i - 1], \n",
@@ -808,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3ade8c3",
+   "id": "10c587fc",
    "metadata": {},
    "source": [
     "#### scale_ratio = 1.2, step_ratio = 1, min_size = (60, 60), max_size = (255, 255) "
@@ -817,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "cb0e4c56",
+   "id": "11433c3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +830,7 @@
     "mmin_size = (60, 60)\n",
     "mmax_size = (255, 255)\n",
     "\n",
-    "imageSetLBPCascade10 = imageSet\n",
+    "imageSetLBPCascade10 = copy.deepcopy(imageSet)\n",
     "\n",
     "for i in range(1, numImagesInSet + 1):\n",
     "    faceDimensions = frontFaceHaarCascade.detect_multi_scale(img = imageSetLBPCascade10[i - 1], \n",
@@ -846,7 +850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aea6f3d8",
+   "id": "8b036923",
    "metadata": {},
    "source": [
     "## HOG + SVM Facial Detection"
@@ -854,8 +858,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8e7ed7dc",
+   "execution_count": 24,
+   "id": "30d54eaa",
    "metadata": {},
    "outputs": [
     {
@@ -878,14 +882,49 @@
       "Score (11): -0.96533697466718\n",
       "Score (12): -0.9748045410016153\n",
       "Score (13): -0.9818929992185716\n",
-      "Score (14): -0.984748026261625\n"
+      "Score (14): -0.984748026261625\n",
+      "\n",
+      "Image 2\n",
+      "Score (0): 1.0176323093904371\n",
+      "Score (1): -0.7914614043699388\n",
+      "Score (2): -0.9783531985746508\n",
+      "\n",
+      "Image 3\n",
+      "Score (0): 1.3653128780855055\n",
+      "Score (1): -0.683938916729558\n",
+      "Score (2): -0.8947612251141641\n",
+      "Score (3): -0.9386890540279902\n",
+      "\n",
+      "Image 4\n",
+      "Score (0): 1.5485170521272535\n",
+      "Score (1): 0.30700260777605726\n",
+      "Score (2): -0.4298581088879678\n",
+      "Score (3): -0.6540729365812425\n",
+      "Score (4): -0.663623746441472\n",
+      "Score (5): -0.8092364631162767\n",
+      "Score (6): -0.8263030946627663\n",
+      "Score (7): -0.8352182517208613\n",
+      "Score (8): -0.856020625637639\n",
+      "Score (9): -0.874207004421192\n",
+      "Score (10): -0.8943581427268561\n",
+      "Score (11): -0.9477130378583047\n",
+      "\n",
+      "Image 5\n",
+      "Score (0): 2.096134964419734\n",
+      "Score (1): 1.7311218418611403\n",
+      "Score (2): 1.643758598758113\n",
+      "Score (3): 0.8419950642122145\n",
+      "Score (4): -0.6560555900433633\n",
+      "Score (5): -0.6612568796053933\n",
+      "Score (6): -0.8867703880169961\n",
+      "Score (7): -0.9921492040530251\n"
      ]
     }
    ],
    "source": [
     "HOGSVMDetector = dlib.get_frontal_face_detector()\n",
     "\n",
-    "imageSetHOGSVC = imageSet\n",
+    "imageSetHOGSVC = copy.deepcopy(imageSet)\n",
     "\n",
     "for i in range(1, numImagesInSet + 1):\n",
     "    image = dlib.load_rgb_image(baseImagePath + str(i) + \".PNG\")\n",
