--- a/ENCM 509 Project - OpenCV Facial Detection.ipynb
+++ b/ENCM 509 Project - OpenCV Facial Detection.ipynb
@@ -65,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c222d5ef",
+   "execution_count": 17,
+   "id": "4356f8b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,12 +96,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "97d9ddb5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "numImagesInSet = 5"
+    "numImagesInSet = 10"
    ]
   },
   {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "e162a7d5",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "0b904a5d",
    "metadata": {},
    "outputs": [],
@@ -186,20 +186,20 @@
    "id": "69c27e31",
    "metadata": {},
    "source": [
-    "### Histogram Equilization"
+    "### Histogram Equalization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "7b16582b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# HISTOGRAM EQUILIZATION\n",
+    "# HISTOGRAM EQUALIZATION\n",
     "for i in range(1, numImagesInSet + 1):\n",
     "    imageSet[i - 1] = cv.equalizeHist(imageSet[i - 1])\n",
-    "    cv.imshow('Histogram Equilized Image ' + str(i), imageSet[i - 1])\n",
+    "    cv.imshow('Histogram Equalized Image ' + str(i), imageSet[i - 1])\n",
     "    k = cv.waitKey(500)\n",
     "    cv.destroyAllWindows()"
    ]
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "965ddc88",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "a7303cda",
    "metadata": {},
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "fb1c9467",
    "metadata": {},
    "outputs": [],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "3d6f6df5",
    "metadata": {},
    "outputs": [],
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "b10f043b",
    "metadata": {},
    "outputs": [],
@@ -359,7 +359,8 @@
     "    \n",
     "    cv.imshow('Face Detection ' + str(i), imageSetHaarCascade3[i - 1])\n",
     "    k = cv.waitKey(500)\n",
-    "    cv.destroyAllWindows()"
+    "    cv.destroyAllWindows()\n",
+    "\n"
    ]
   },
   {
@@ -372,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "2ed2cb81",
    "metadata": {},
    "outputs": [],
@@ -388,10 +389,11 @@
     "    for (x, y, w, h) in faceDimensions:\n",
     "            cv.rectangle(imageSetHaarCascade5[i - 1], (x, y), (x + w, y + h), (255, 0, 0), 2)\n",
     "            roi_gray = imageSetHaarCascade5[i - 1][y:y + h, x:x + w]\n",
+    "\n",
     "    \n",
     "    cv.imshow('Face Detection ' + str(i), imageSetHaarCascade5[i - 1])\n",
     "    k = cv.waitKey(500)\n",
-    "    cv.destroyAllWindows()"
+    "    cv.destroyAllWindows()\n"
    ]
   },
   {
@@ -404,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "724f58bb",
    "metadata": {},
    "outputs": [],
@@ -436,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "66428abc",
    "metadata": {},
    "outputs": [],
@@ -476,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "66fa1b7c",
    "metadata": {},
    "outputs": [],
@@ -516,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "169d2061",
    "metadata": {},
    "outputs": [],
@@ -554,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "c15f7adf",
    "metadata": {},
    "outputs": [],
@@ -592,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "id": "95673e3f",
    "metadata": {},
    "outputs": [],
@@ -630,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "id": "c7e88751",
    "metadata": {},
    "outputs": [],
@@ -668,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "id": "51a2c5f4",
    "metadata": {},
    "outputs": [],
@@ -706,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "id": "25ec07c0",
    "metadata": {},
    "outputs": [],
@@ -744,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "id": "2f9e3d06",
    "metadata": {},
    "outputs": [],
@@ -782,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "id": "975598d1",
    "metadata": {},
    "outputs": [],
@@ -820,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "id": "11433c3e",
    "metadata": {},
    "outputs": [],
@@ -858,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "id": "30d54eaa",
    "metadata": {},
    "outputs": [
@@ -917,7 +919,56 @@
       "Score (4): -0.6560555900433633\n",
       "Score (5): -0.6612568796053933\n",
       "Score (6): -0.8867703880169961\n",
-      "Score (7): -0.9921492040530251\n"
+      "Score (7): -0.9921492040530251\n",
+      "\n",
+      "Image 6\n",
+      "Score (0): 0.9045727886690016\n",
+      "Score (1): -0.6219982947043952\n",
+      "Score (2): -0.741853853593168\n",
+      "Score (3): -0.7418803534971361\n",
+      "Score (4): -0.8976144636802252\n",
+      "Score (5): -0.9534906707273607\n",
+      "Score (6): -0.9605581606559332\n",
+      "Score (7): -0.9840382541516397\n",
+      "Score (8): -0.9955131853751715\n",
+      "Score (9): -0.9988911757626093\n",
+      "\n",
+      "Image 7\n",
+      "Score (0): 1.313469234897029\n",
+      "Score (1): 0.953070942355525\n",
+      "Score (2): 0.7681292091509726\n",
+      "Score (3): -0.8278776611188028\n",
+      "Score (4): -0.8793926844753779\n",
+      "Score (5): -0.9988704622164772\n",
+      "\n",
+      "Image 8\n",
+      "Score (0): 1.0896401559181634\n",
+      "Score (1): 0.8503163494600172\n",
+      "Score (2): 0.26922264691438214\n",
+      "Score (3): -0.6290060840116625\n",
+      "Score (4): -0.8141888583996866\n",
+      "Score (5): -0.8816265426145677\n",
+      "Score (6): -0.9702761019401129\n",
+      "Score (7): -0.9971264804699991\n",
+      "\n",
+      "Image 9\n",
+      "Score (0): 1.1473287140032675\n",
+      "Score (1): -0.49371932398601137\n",
+      "Score (2): -0.679056104229558\n",
+      "Score (3): -0.8082230985537575\n",
+      "Score (4): -0.8138048015104418\n",
+      "Score (5): -0.8251070342527513\n",
+      "Score (6): -0.84247907999907\n",
+      "Score (7): -0.8770036063657884\n",
+      "Score (8): -0.8792442287304971\n",
+      "Score (9): -0.8953679502383278\n",
+      "Score (10): -0.9102843413509882\n",
+      "Score (11): -0.9875121722378291\n",
+      "Score (12): -0.9884375537732217\n",
+      "\n",
+      "Image 10\n",
+      "Score (0): 0.5926490463746901\n",
+      "Score (1): -0.9834020743526972\n"
      ]
     }
    ],
@@ -942,6 +993,241 @@
     "    cv.imshow('Face Detection ' + str(i), imageSetHOGSVC[i - 1])\n",
     "    k = cv.waitKey(500)\n",
     "    cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c4f2d1b",
+   "metadata": {},
+   "source": [
+    "### IoU Scores ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "6093d114",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def click_event(event, x, y, flags, params):\n",
+    " \n",
+    "    # checking for left mouse clicks\n",
+    "    if event == cv.EVENT_LBUTTONDOWN:\n",
+    " \n",
+    "        # displaying the coordinates\n",
+    "        # on the Shell\n",
+    "        print(x, ' ', y)\n",
+    " \n",
+    "        # displaying the coordinates\n",
+    "        # on the image window\n",
+    "        font = cv.FONT_HERSHEY_SIMPLEX\n",
+    "        cv.putText(img, str(x) + ',' +\n",
+    "                    str(y), (x,y), font,\n",
+    "                    1, (255, 0, 0), 2)\n",
+    "        cv.imshow('image', img)\n",
+    " \n",
+    "    # checking for right mouse clicks    \n",
+    "    if event==cv.EVENT_RBUTTONDOWN:\n",
+    " \n",
+    "        # displaying the coordinates\n",
+    "        # on the Shell\n",
+    "        print(x, ' ', y)\n",
+    " \n",
+    "        # displaying the coordinates\n",
+    "        # on the image window\n",
+    "        font = cv.FONT_HERSHEY_SIMPLEX\n",
+    "        b = img[y, x, 0]\n",
+    "        g = img[y, x, 1]\n",
+    "        r = img[y, x, 2]\n",
+    "        cv.putText(img, str(b) + ',' +\n",
+    "                    str(g) + ',' + str(r),\n",
+    "                    (x,y), font, 1,\n",
+    "                    (255, 255, 0), 2)\n",
+    "        cv.imshow('image', img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "d730e737",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "162   228\n",
+      "160   134\n",
+      "243   132\n",
+      "242   229\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "    # reading the image\n",
+    "    img = cv.imread('.\\Images\\MatLabGT4.png', 1)\n",
+    "\n",
+    "    cv.imshow('image', img)\n",
+    "    cv.setMouseCallback('image', click_event)\n",
+    "    cv.waitKey(0)\n",
+    "    # close the window\n",
+    "    cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "8e6bf3c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frontFaceHaarCascade = cv.CascadeClassifier('./haarcascades/haarcascade_frontalface_default.xml')\n",
+    "\n",
+    "mScaleFactor = 1.1\n",
+    "mMinNeighbours = 5\n",
+    "iouImageSet = []\n",
+    "iouImageSet.append(cv.imread('./Images/MatLabGT1.PNG'))\n",
+    "iouImageSet.append(cv.imread('./Images/MatLabGT2.PNG'))\n",
+    "iouImageSet.append(cv.imread('./Images/MatLabGT3.PNG'))\n",
+    "iouImageSet.append(cv.imread('./Images/MatLabGT4.PNG'))\n",
+    "\n",
+    "iouImageDimensions = iouImageSet[0].shape\n",
+    "normalizedIoUImage = np.zeros(imageDimensions)\n",
+    "\n",
+    "#Pre-processing\n",
+    "for i in range(1, 5):\n",
+    "    # Greyscale\n",
+    "    iouImageSet[i - 1] = cv.cvtColor(iouImageSet[i - 1], cv.COLOR_BGR2GRAY)\n",
+    "\n",
+    "    # Histogram Equalization\n",
+    "    iouImageSet[i - 1] = cv.equalizeHist(iouImageSet[i - 1])\n",
+    "\n",
+    "    #Normalization\n",
+    "    iouImageSet[i - 1] = cv.normalize(iouImageSet[i - 1], normalizedIoUImage, 0, 255, cv.NORM_MINMAX)\n",
+    "\n",
+    "    #Apply a Gausian Noise Filter\n",
+    "    gaussianFilter = cv.GaussianBlur(iouImageSet[i - 1], (0, 0), 2.0)\n",
+    "    \n",
+    "    # Add weighted Gausian Filter to the original image\n",
+    "    iouImageSet[i - 1] = cv.addWeighted(iouImageSet[i - 1], 2.0, gaussianFilter, -1.0, 0)\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "f20f1f31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[101, 126, 229, 254]\n",
+      "[168, 76, 269, 177]\n",
+      "[87, 66, 221, 200]\n",
+      "[163, 136, 241, 214]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "haarDimensions = []\n",
+    "\n",
+    "\n",
+    "for i in range(1, 5):\n",
+    "    faceDimensions = frontFaceHaarCascade.detectMultiScale(iouImageSet[i - 1], scaleFactor = mScaleFactor, minNeighbors = mMinNeighbours)\n",
+    "\n",
+    "    for (x, y, w, h) in faceDimensions:\n",
+    "            cv.rectangle(iouImageSet[i - 1], (x, y), (x + w, y + h), (255, 0, 0), 2)\n",
+    "            roi_gray = iouImageSet[i - 1][y:y + h, x:x + w]\n",
+    "            haarDimensions.append([x, y, x+w, y+h])\n",
+    "            print(haarDimensions[i-1])\n",
+    "    \n",
+    "    cv.imshow('Face Detection ' + str(i), iouImageSet[i - 1])\n",
+    "    k = cv.waitKey(5000)\n",
+    "    cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "284670a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_dimensions = {}\n",
+    "\n",
+    "#Set for dimensions of ground truth boxes, format: x, y, x+w, y+h\n",
+    "gt_dimensions[0] = [109, 124, 243, 227]\n",
+    "gt_dimensions[1] = [174, 67, 260, 179]\n",
+    "gt_dimensions[2] = [99, 69, 205, 206]\n",
+    "gt_dimensions[3] = [163, 132, 243, 229]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9da19c03",
+   "metadata": {},
+   "source": [
+    "## Area of Intersection / Area of Union ##"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "7f81049c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bb_intersection_over_union(boxA, boxB):\n",
+    "\t# determine the (x, y)-coordinates of the intersection rectangle\n",
+    "\txA = max(boxA[0], boxB[0])\n",
+    "\tyA = max(boxA[1], boxB[1])\n",
+    "\txB = min(boxA[2], boxB[2])\n",
+    "\tyB = min(boxA[3], boxB[3])\n",
+    "\n",
+    "\t# compute the area of intersection rectangle\n",
+    "\tinterArea = max(0, xB - xA + 1) * max(0, yB - yA + 1)\n",
+    "\n",
+    "\t# compute the area of both the prediction and ground-truth\n",
+    "\t# rectangles\n",
+    "\tboxAArea = (boxA[2] - boxA[0] + 1) * (boxA[3] - boxA[1] + 1)\n",
+    "\tboxBArea = (boxB[2] - boxB[0] + 1) * (boxB[3] - boxB[1] + 1)\n",
+    "\n",
+    "\t# compute the intersection over union by taking the intersection\n",
+    "\t# area and dividing it by the sum of prediction + ground-truth\n",
+    "\t# areas - the interesection area\n",
+    "\tiou = interArea / float(boxAArea + boxBArea - interArea)\n",
+    "\t# return the intersection over union value\n",
+    "\treturn iou"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "54c93f20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image 1 IoU score 0.6729919842957631\n",
+      "Image 2 IoU score 0.7810932136255612\n",
+      "Image 3 IoU score 0.7486086818254094\n",
+      "Image 4 IoU score 0.7862181909800957\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Image 1 IoU score {}\".format(bb_intersection_over_union(gt_dimensions[0], haarDimensions[0])))\n",
+    "print(\"Image 2 IoU score {}\".format(bb_intersection_over_union(gt_dimensions[1], haarDimensions[1])))\n",
+    "print(\"Image 3 IoU score {}\".format(bb_intersection_over_union(gt_dimensions[2], haarDimensions[2])))\n",
+    "print(\"Image 4 IoU score {}\".format(bb_intersection_over_union(gt_dimensions[3], haarDimensions[3])))"
    ]
   }
  ],
