IoU scores for HOG+SVM

--- a/ENCM 509 Project - OpenCV Facial Detection.ipynb
+++ b/ENCM 509 Project - OpenCV Facial Detection.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 118,
    "id": "4356f8b5",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 119,
    "id": "97d9ddb5",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 120,
    "id": "e162a7d5",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 121,
    "id": "0b904a5d",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 122,
    "id": "7b16582b",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 123,
    "id": "965ddc88",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 124,
    "id": "a7303cda",
    "metadata": {},
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 125,
    "id": "fb1c9467",
    "metadata": {},
    "outputs": [],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 126,
    "id": "3d6f6df5",
    "metadata": {},
    "outputs": [],
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 127,
    "id": "b10f043b",
    "metadata": {},
    "outputs": [],
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 128,
    "id": "2ed2cb81",
    "metadata": {},
    "outputs": [],
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 129,
    "id": "724f58bb",
    "metadata": {},
    "outputs": [],
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 130,
    "id": "66428abc",
    "metadata": {},
    "outputs": [],
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 158,
    "id": "66fa1b7c",
    "metadata": {},
    "outputs": [],
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 159,
    "id": "169d2061",
    "metadata": {},
    "outputs": [],
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 160,
    "id": "c15f7adf",
    "metadata": {},
    "outputs": [],
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 161,
    "id": "95673e3f",
    "metadata": {},
    "outputs": [],
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 162,
    "id": "c7e88751",
    "metadata": {},
    "outputs": [],
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 163,
    "id": "51a2c5f4",
    "metadata": {},
    "outputs": [],
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 164,
    "id": "25ec07c0",
    "metadata": {},
    "outputs": [],
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 165,
    "id": "2f9e3d06",
    "metadata": {},
    "outputs": [],
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 166,
    "id": "975598d1",
    "metadata": {},
    "outputs": [],
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 167,
    "id": "11433c3e",
    "metadata": {},
    "outputs": [],
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 168,
    "id": "30d54eaa",
    "metadata": {},
    "outputs": [
@@ -1004,8 +1004,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "35fe479c",
+   "metadata": {},
+   "source": [
+    "First, the coordinates of the ground-truth boxes are collected. Next, the coordinates of the facial recognition boxes from the Haar (Scale Factor = 1.1, minNeighbours = 5) and HOG+SVM algorithms are collected. These will be used to compute the IoU score (Intersection over Union)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 142,
    "id": "6093d114",
    "metadata": {},
    "outputs": [],
@@ -1049,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 191,
    "id": "d730e737",
    "metadata": {},
    "outputs": [
@@ -1057,16 +1065,97 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "162   228\n",
-      "160   134\n",
-      "243   132\n",
-      "242   229\n"
+      "109   257\n",
+      "211   258\n",
+      "211   122\n",
+      "108   121\n"
      ]
     }
    ],
    "source": [
     "\n",
     "    # reading the image\n",
+    "    img = cv.imread('.\\Images\\MatLabGT1.png', 1)\n",
+    "\n",
+    "    cv.imshow('image', img)\n",
+    "    cv.setMouseCallback('image', click_event)\n",
+    "    cv.waitKey(0)\n",
+    "    # close the window\n",
+    "    cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "id": "f8ec54c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "261   178\n",
+      "176   179\n",
+      "260   68\n",
+      "173   67\n"
+     ]
+    }
+   ],
+   "source": [
+    "    img = cv.imread('.\\Images\\MatLabGT2.png', 1)\n",
+    "\n",
+    "    cv.imshow('image', img)\n",
+    "    cv.setMouseCallback('image', click_event)\n",
+    "    cv.waitKey(0)\n",
+    "    # close the window\n",
+    "    cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "id": "b11f56c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "205   205\n",
+      "98   206\n",
+      "204   71\n",
+      "100   68\n"
+     ]
+    }
+   ],
+   "source": [
+    "    img = cv.imread('.\\Images\\MatLabGT3.png', 1)\n",
+    "\n",
+    "    cv.imshow('image', img)\n",
+    "    cv.setMouseCallback('image', click_event)\n",
+    "    cv.waitKey(0)\n",
+    "    # close the window\n",
+    "    cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "id": "cf6ac391",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "243   229\n",
+      "162   230\n",
+      "244   132\n",
+      "159   131\n"
+     ]
+    }
+   ],
+   "source": [
     "    img = cv.imread('.\\Images\\MatLabGT4.png', 1)\n",
     "\n",
     "    cv.imshow('image', img)\n",
@@ -1078,15 +1167,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 144,
+   "id": "284670a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_dimensions = {}\n",
+    "\n",
+    "#Set for dimensions of ground truth boxes, format: x, y, x+w, y+h\n",
+    "gt_dimensions[0] = [109, 124, 243, 227]\n",
+    "gt_dimensions[1] = [174, 67, 260, 179]\n",
+    "gt_dimensions[2] = [99, 69, 205, 206]\n",
+    "gt_dimensions[3] = [163, 132, 243, 229]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
    "id": "8e6bf3c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "frontFaceHaarCascade = cv.CascadeClassifier('./haarcascades/haarcascade_frontalface_default.xml')\n",
     "\n",
-    "mScaleFactor = 1.1\n",
-    "mMinNeighbours = 5\n",
     "iouImageSet = []\n",
     "iouImageSet.append(cv.imread('./Images/MatLabGT1.PNG'))\n",
     "iouImageSet.append(cv.imread('./Images/MatLabGT2.PNG'))\n",
@@ -1117,8 +1220,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6442493d",
+   "metadata": {},
+   "source": [
+    "Haar Cascade box dimensions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 149,
    "id": "f20f1f31",
    "metadata": {},
    "outputs": [
@@ -1139,7 +1250,7 @@
     "\n",
     "\n",
     "for i in range(1, 5):\n",
-    "    faceDimensions = frontFaceHaarCascade.detectMultiScale(iouImageSet[i - 1], scaleFactor = mScaleFactor, minNeighbors = mMinNeighbours)\n",
+    "    faceDimensions = frontFaceHaarCascade.detectMultiScale(iouImageSet[i - 1], scaleFactor = 1.1, minNeighbors = 5)\n",
     "\n",
     "    for (x, y, w, h) in faceDimensions:\n",
     "            cv.rectangle(iouImageSet[i - 1], (x, y), (x + w, y + h), (255, 0, 0), 2)\n",
@@ -1153,19 +1264,98 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "284670a7",
+   "cell_type": "markdown",
+   "id": "4928c931",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "gt_dimensions = {}\n",
+    "HOG+SOV box dimensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "5eebe641",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Image 1\n",
+      "96 139 225 268\n",
+      "116 206 205 295\n",
+      "\n",
+      "Image 2\n",
+      "175 86 265 176\n",
+      "303 329 378 403\n",
+      "\n",
+      "Image 3\n",
+      "103 92 211 199\n",
+      "209 114 245 150\n",
+      "279 343 331 395\n",
+      "\n",
+      "Image 4\n",
+      "162 146 237 221\n"
+     ]
+    }
+   ],
+   "source": [
+    "hogDimensions = []\n",
+    "HOGSVMDetector = dlib.get_frontal_face_detector()\n",
     "\n",
-    "#Set for dimensions of ground truth boxes, format: x, y, x+w, y+h\n",
-    "gt_dimensions[0] = [109, 124, 243, 227]\n",
-    "gt_dimensions[1] = [174, 67, 260, 179]\n",
-    "gt_dimensions[2] = [99, 69, 205, 206]\n",
-    "gt_dimensions[3] = [163, 132, 243, 229]"
+    "for i in range(1,5):\n",
+    "    image = dlib.load_rgb_image('./Images/MatLabGT' + str(i) + \".PNG\")\n",
+    "    \n",
+    "    faceDimensions, scores, idx = HOGSVMDetector.run(image, 1, -1)\n",
+    "    \n",
+    "    print(\"\\nImage {}\".format(i))\n",
+    "    \n",
+    "    for (j, d) in enumerate(faceDimensions):\n",
+    "        #print(\"Score ({}): {}\".format(j, scores[j]))\n",
+    "        \n",
+    "        cv.rectangle(iouImageSet[i - 1], (d.left(), d.top()), (d.right(), d.bottom()), (255, 0, 0), 2)\n",
+    "        roi_gray = iouImageSet[i - 1][y:d.bottom(), x:d.right()]\n",
+    "        print(d.left(),  d.top(), d.right(), d.bottom())\n",
+    "        hogDimensions.append([d.left(),  d.top(), d.right(), d.bottom()])\n",
+    "\n",
+    "    cv.imshow('Face Detection ' + str(i), iouImageSet[i - 1])\n",
+    "    k = cv.waitKey(500)\n",
+    "    cv.destroyAllWindows()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b12ab78b",
+   "metadata": {},
+   "source": [
+    "Of these dimensions, we will drop the indexes that are too far from our ground-truth boxes (1, 3, 5, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "id": "72cf81b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[96, 139, 225, 268], [116, 206, 205, 295], [175, 86, 265, 176], [303, 329, 378, 403], [103, 92, 211, 199], [209, 114, 245, 150], [279, 343, 331, 395], [162, 146, 237, 221]]\n",
+      "[[96, 139, 225, 268], [175, 86, 265, 176], [103, 92, 211, 199], [162, 146, 237, 221]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hogDimensions)\n",
+    "del hogDimensions[1]\n",
+    "del hogDimensions[2]\n",
+    "del hogDimensions[3]\n",
+    "del hogDimensions[3]\n",
+    "\n",
+    "print(hogDimensions)\n"
    ]
   },
   {
@@ -1178,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 185,
    "id": "7f81049c",
    "metadata": {},
    "outputs": [],
@@ -1208,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 189,
    "id": "54c93f20",
    "metadata": {},
    "outputs": [
@@ -1216,18 +1406,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image 1 IoU score 0.6729919842957631\n",
-      "Image 2 IoU score 0.7810932136255612\n",
-      "Image 3 IoU score 0.7486086818254094\n",
-      "Image 4 IoU score 0.7862181909800957\n"
+      "Image 1 Haar Cascades IoU score 0.6729919842957631\n",
+      "Image 2 Haar Cascades IoU score 0.7810932136255612\n",
+      "Image 3 Haar Cascades IoU score 0.7486086818254094\n",
+      "Image 4 Haar Cascades IoU score 0.7862181909800957\n"
      ]
     }
    ],
    "source": [
-    "print(\"Image 1 IoU score {}\".format(bb_intersection_over_union(gt_dimensions[0], haarDimensions[0])))\n",
-    "print(\"Image 2 IoU score {}\".format(bb_intersection_over_union(gt_dimensions[1], haarDimensions[1])))\n",
-    "print(\"Image 3 IoU score {}\".format(bb_intersection_over_union(gt_dimensions[2], haarDimensions[2])))\n",
-    "print(\"Image 4 IoU score {}\".format(bb_intersection_over_union(gt_dimensions[3], haarDimensions[3])))"
+    "print(\"Image 1 Haar Cascades IoU score {}\".format(bb_intersection_over_union(gt_dimensions[0], haarDimensions[0])))\n",
+    "print(\"Image 2 Haar Cascades IoU score {}\".format(bb_intersection_over_union(gt_dimensions[1], haarDimensions[1])))\n",
+    "print(\"Image 3 Haar Cascades IoU score {}\".format(bb_intersection_over_union(gt_dimensions[2], haarDimensions[2])))\n",
+    "print(\"Image 4 Haar Cascades IoU score {}\".format(bb_intersection_over_union(gt_dimensions[3], haarDimensions[3])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "id": "5af7c193",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image 1 HOG+SVM IoU score 0.5072830905636478\n",
+      "Image 2 HOG+SVM IoU score 0.7608399766673148\n",
+      "Image 3 HOG+SVM IoU score 0.7216815881666018\n",
+      "Image 4 HOG+SVM IoU score 0.7112553032193661\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Image 1 HOG+SVM IoU score {}\".format(bb_intersection_over_union(gt_dimensions[0], hogDimensions[0])))\n",
+    "print(\"Image 2 HOG+SVM IoU score {}\".format(bb_intersection_over_union(gt_dimensions[1], hogDimensions[1])))\n",
+    "print(\"Image 3 HOG+SVM IoU score {}\".format(bb_intersection_over_union(gt_dimensions[2], hogDimensions[2])))\n",
+    "print(\"Image 4 HOG+SVM IoU score {}\".format(bb_intersection_over_union(gt_dimensions[3], hogDimensions[3])))"
    ]
   }
  ],
