--- a/ENCM 509 Project - OpenCV Facial Detection.ipynb
+++ b/ENCM 509 Project - OpenCV Facial Detection.ipynb
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 196,
    "id": "6093d114",
    "metadata": {},
    "outputs": [],
@@ -1033,31 +1033,12 @@
     "        cv.putText(img, str(x) + ',' +\n",
     "                    str(y), (x,y), font,\n",
     "                    1, (255, 0, 0), 2)\n",
-    "        cv.imshow('image', img)\n",
-    " \n",
-    "    # checking for right mouse clicks    \n",
-    "    if event==cv.EVENT_RBUTTONDOWN:\n",
-    " \n",
-    "        # displaying the coordinates\n",
-    "        # on the Shell\n",
-    "        print(x, ' ', y)\n",
-    " \n",
-    "        # displaying the coordinates\n",
-    "        # on the image window\n",
-    "        font = cv.FONT_HERSHEY_SIMPLEX\n",
-    "        b = img[y, x, 0]\n",
-    "        g = img[y, x, 1]\n",
-    "        r = img[y, x, 2]\n",
-    "        cv.putText(img, str(b) + ',' +\n",
-    "                    str(g) + ',' + str(r),\n",
-    "                    (x,y), font, 1,\n",
-    "                    (255, 255, 0), 2)\n",
     "        cv.imshow('image', img)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 197,
    "id": "d730e737",
    "metadata": {},
    "outputs": [
@@ -1065,10 +1046,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "109   257\n",
-      "211   258\n",
-      "211   122\n",
-      "108   121\n"
+      "107   121\n",
+      "108   259\n",
+      "211   256\n",
+      "211   123\n"
      ]
     }
    ],
@@ -1349,6 +1330,7 @@
     }
    ],
    "source": [
+    "# Dropping indexes that are out of range\n",
     "print(hogDimensions)\n",
     "del hogDimensions[1]\n",
     "del hogDimensions[2]\n",
@@ -1388,11 +1370,8 @@
     "\tboxAArea = (boxA[2] - boxA[0] + 1) * (boxA[3] - boxA[1] + 1)\n",
     "\tboxBArea = (boxB[2] - boxB[0] + 1) * (boxB[3] - boxB[1] + 1)\n",
     "\n",
-    "\t# compute the intersection over union by taking the intersection\n",
-    "\t# area and dividing it by the sum of prediction + ground-truth\n",
-    "\t# areas - the interesection area\n",
+    "\t\n",
     "\tiou = interArea / float(boxAArea + boxBArea - interArea)\n",
-    "\t# return the intersection over union value\n",
     "\treturn iou"
    ]
   },
