--- a/ENCM 509 Project - OpenCV Facial Detection.ipynb
+++ b/ENCM 509 Project - OpenCV Facial Detection.ipynb
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 205,
    "id": "3d6f6df5",
    "metadata": {},
    "outputs": [],
@@ -326,7 +326,7 @@
     "            roi_gray = imageSetHaarCascade1[i - 1][y:y + h, x:x + w]\n",
     "    \n",
     "    cv.imshow('Face Detection ' + str(i), imageSetHaarCascade1[i - 1])\n",
-    "    k = cv.waitKey(500)\n",
+    "    k = cv.waitKey(5000)\n",
     "    cv.destroyAllWindows()"
    ]
   },
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 203,
    "id": "30d54eaa",
    "metadata": {},
    "outputs": [
@@ -1249,7 +1249,7 @@
    "id": "4928c931",
    "metadata": {},
    "source": [
-    "HOG+SOV box dimensions"
+    "HOG+SVM box dimensions"
    ]
   },
   {
